[GREEN] Fix transaction services